<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="3dp"
    android:layout_margin="10dp"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#55efc4"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:text="@string/ec"
                android:textAlignment="center"
                android:textSize="20dp">
            </TextView>
            <TextView
                android:id="@+id/text_ec"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="20dp"
                android:text="0">
            </TextView>
            <Button
                android:id="@+id/btu_ecdown"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/btu_style_circle"
                android:layout_gravity="center"
                android:text="@string/countdown"
                android:textColor="#000000"
                android:textSize="20dp">
            </Button>
            <Button
                android:id="@+id/btu_ecup"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/btu_style_circle"
                android:text="@string/countup"
                android:textColor="#000000"
                android:layout_marginLeft="10dp"
                android:textSize="20dp">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="30dp"
            android:background="#f8efba"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:text="@string/phvalue"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="20dp">
            </TextView>
            <TextView
                android:id="@+id/text_ph"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="20dp"
                android:text="0">
            </TextView>
            <Button
                android:id="@+id/btu_phdown"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/btu_style_circle"
                android:text="@string/countdown"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:textSize="20dp">
            </Button>
            <Button
                android:id="@+id/btu_phup"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/btu_style_circle"
                android:text="@string/countup"
                android:textColor="#000000"
                android:layout_marginLeft="10dp"
                android:textSize="20dp">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="30dp"
            android:background="#55efc4"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:text="@string/tempofwater"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="20dp">
            </TextView>
            <TextView
                android:id="@+id/text_tempofwater"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:text="0">
            </TextView>
            <Button
                android:id="@+id/btu_tempdown"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/btu_style_circle"
                android:text="@string/countdown"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:textSize="20dp">
            </Button>
            <Button
                android:id="@+id/btu_tempup"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/btu_style_circle"
                android:text="@string/countup"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:textSize="20dp">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="30dp"
            android:background="#f8efba"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:text="@string/highofwater"
                android:textAlignment="center"
                android:textSize="20dp">
            </TextView>
            <TextView
                android:id="@+id/text_waterhigh"
                android:layout_width="100dp"
                android:layout_gravity="center"
                android:layout_height="60dp"
                android:textAlignment="center"
                android:textSize="20dp"
                android:text="0">
            </TextView>
            <Button
                android:id="@+id/btu_highdown"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/btu_style_circle"
                android:text="@string/countdown"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:textSize="20dp">
            </Button>
            <Button
                android:id="@+id/btu_highup"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/btu_style_circle"
                android:text="@string/countup"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:textSize="20dp">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="30dp"
            android:background="#f8efba"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:text="@string/dry"
                android:textAlignment="center"
                android:textSize="20dp">
            </TextView>
            <TextView
                android:id="@+id/text_dry"
                android:layout_width="100dp"
                android:layout_gravity="center"
                android:layout_height="60dp"
                android:textAlignment="center"
                android:textSize="20dp"
                android:text="0">
            </TextView>
            <Button
                android:id="@+id/btu_drydown"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/btu_style_circle"
                android:text="@string/countdown"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:textSize="20dp">
            </Button>
            <Button
                android:id="@+id/btu_dryup"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/btu_style_circle"
                android:text="@string/countup"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:textSize="20dp">
            </Button>
        </LinearLayout>
        <TextView
            android:id="@+id/text_text"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:text="暂无信息"/>
    </LinearLayout>


</LinearLayout>